datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id              String           @id @default(cuid())
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  email           String           @unique
  lastname        String?
  googleId        String?
  firstname       String?
  avatar          String?
  resumes         Resume[]
  resumeTemplates ResumeTemplate[]
}

model Resume {
  id           String     @id @default(cuid())
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  title        String
  user         User       @relation(fields: [userId], references: [id])
  userId       String
  head       String?
  html         String?
  css          String?
  json         String?
  previewImage String?
}

model ResumeTemplate {
  id        String     @id @default(cuid())
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  user      User       @relation(fields: [userId], references: [id])
  userId    String
  title     String
  html      String?
  css       String?
  md        String?
  json      String?
}

