//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  lastname String
  googleId String
  firstname String
  avatar String
  resumes Resume [not null]
  resumeTemplates ResumeTemplate [not null]
}

Table Resume {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  user User [not null]
  userId String [not null]
  head String
  html String
  css String
  json String
  previewImage String
}

Table ResumeTemplate {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  title String [not null]
  html String
  css String
  md String
  json String
}

Ref: Resume.userId > User.id

Ref: ResumeTemplate.userId > User.id